Test regex namedGroups
Signed-off-by: XhstormR <10527522+XhstormR@users.noreply.github.com>